--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-hell0 w0rld
+<html lang="tr">
+  <head>
+    <meta charset="utf-8">
+    <title>Blog</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="personal blog">
+    <link rel="stylesheet" href="css/style.css">
+  </head>
+  <body>
+    hell0 w0rld
+  </body>
+</html>
