--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     hell0 w0rld
-    <li><a href="latex.html">LateX notes</a></li>
+    <li><a href="latex.txt">LateX notes</a></li>
   </body>
 </html>
