--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     
   </head>
   <body>
-    
+    <div id="output"></div>
   </body>
   <script>
+    let output = document.getElementById("output");
     let headers = ["Loader", "Reddit"];
     let links = ["loader.html","redd.html"];
     for(let i=0;i<headers.length;i++){
