--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <script>
     let output = document.getElementById("output");
     let headers = ["Loader", "Reddit"];
-    let links = ["loader.html","redd.html"];
+    let links = ["loader.html","reddit.html"];
     for(let i=0;i<headers.length;i++){
       output.innerHTML += `<li><a href="${links[i]}">${headers[i]}</a></li>`;
     }
