--- a/loader.html
+++ b/loader.html
@@ -38,9 +38,9 @@
 		for(let i=0; i < myarr.length; i++){		
 			outp.innerHTML += `<li>
 				${myarr[i]}
-				<a href="${googleImagesLink}+${myarr[i]}+${ek}">(g. images)</a> |
-				<a href="${googleSearchLink}+${myarr[i]}+${ek}">(google)</a> |
-				<a href="${redditSearchLink}+${myarr[i]}+${ek}">(reddit)</a> |
+				<a target="_blank" href="${googleImagesLink}+${myarr[i]}+${ek}">(g. images)</a> |
+				<a target="_blank" href="${googleSearchLink}+${myarr[i]}+${ek}">(google)</a> |
+				<a target="_blank" href="${redditSearchLink}+${myarr[i]}+${ek}">(reddit)</a> |
 			</li>
 			`
 		}
