--- a/loader.html
+++ b/loader.html
@@ -42,7 +42,8 @@
 				<a target="_blank" href="${googleImagesLink}+${myarr[i]}+${ek}">(g. images)</a> |
 				<a target="_blank" href="${googleSearchLink}+${myarr[i]}+${ek}">(google)</a> |
 				<a target="_blank" href="${redditSearchLink}+${myarr[i]}+${ek}">(reddit)</a> |
-    				<a target="_blank" href="${duckduckgoSearchLink}+${myarr[i]}+${ek}">(duckduckgo)</a>
+    				<a target="_blank" href="${duckduckgoSearchLink}+${myarr[i]}+${ek}+&iax=images&ia=images">(duckduckgo)</a>
+	
     				
 			</li>
 			`
