--- a/loader.html
+++ b/loader.html
@@ -39,10 +39,10 @@
 		for(let i=0; i < myarr.length; i++){		
 			outp.innerHTML += `<li>
 				${myarr[i]}
-				<a target="_blank" href="${googleImagesLink}+${myarr[i]}+${ek}">(g. images)</a> |
-				<a target="_blank" href="${googleSearchLink}+${myarr[i]}+${ek}">(google)</a> |
-				<a target="_blank" href="${redditSearchLink}+${myarr[i]}+${ek}">(reddit)</a> |
-    				<a target="_blank" href="${duckduckgoSearchLink}+${myarr[i]}+${ek}+&iax=images&ia=images">(duckduckgo)</a>
+				<a target="_blank" href='${googleImagesLink}"${myarr[i]}+${ek}"'>(g. images)</a> |
+				<a target="_blank" href='${googleSearchLink}"${myarr[i]}+${ek}"'>(google)</a> |
+				<a target="_blank" href='${redditSearchLink}"${myarr[i]}+${ek}"'>(reddit)</a> |
+    				<a target="_blank" href='${duckduckgoSearchLink}"${myarr[i]}+${ek}"&iax=images&ia=images'>(duckduckgo)</a>
 	
     				
 			</li>
