--- a/gridder.html
+++ b/gridder.html
@@ -42,6 +42,8 @@
     <script>
         function cleanup() {
             document.getElementById("myid").value = "";
+            document.getElementById("myid").focus();
+            
         }
         function run(){
             let mycheck = document.getElementById("duckduck");
