--- a/mersin/index.html
+++ b/mersin/index.html
@@ -572,7 +572,7 @@
             <div class="col-lg-7 col-md-6">
                 <div class="row">
                     <div class="col-md-6 mb-5">
-                        <h3 class="text-primary mb-4">Get In Touch</h3>
+                        <h3 class="text-primary mb-4">İletişime Geçin</h3>
                         <p><i class="fa fa-map-marker-alt mr-2"></i>Merkez: Fevziçakmak Mah. 1.Fevziçakmak Cd. No: 5/4 Sefaköy / KÜÇÜKÇEKMECE</p>
                         <p><i class="fa fa-phone-alt mr-2"></i>+90 212 664 74 91</p>
                         <p><i class="fa fa-envelope mr-2"></i>info@mersintasimacilik.com.tr</p>
