--- a/mersin/contact.html
+++ b/mersin/contact.html
@@ -5,9 +5,7 @@
     <meta charset="utf-8">
     <title>Mersin Taşımacılık Kargo Tic. A.Ş.</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
-
+    
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
 
@@ -77,7 +75,7 @@
                 <div class="navbar-nav m-auto py-0">
                     <a href="index.html" class="nav-item nav-link">Ana Sayfa</a>
                     <a href="about.html" class="nav-item nav-link">Hakkımızda</a>
-                    <a href="service.html" class="nav-item nav-link">Hizmetlerimiz</a>
+                    <a href="contact.html" class="nav-item nav-link active">Şubelerimiz</a>
                     <!-- <a href="price.html" class="nav-item nav-link">Price</a> 
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
@@ -86,7 +84,7 @@
                             <a href="single.html" class="dropdown-item">Blog Detail</a>
                         </div>-->
                     </div>
-                    <a href="contact.html" class="nav-item nav-link active">İletişim</a>
+                    <a href="#footer" class="nav-item nav-link">İletişim</a>
                 </div>
                 <!-- <a href="" class="btn btn-primary py-2 px-4 d-none d-lg-block">Get A Quote</a> -->
             </div>
@@ -98,9 +96,9 @@
     <!-- Header Start -->
     <div class="jumbotron jumbotron-fluid mb-5">
         <div class="container text-center py-5">
-            <h1 class="text-white display-3">İletişim</h1>
+            <h1 class="text-white display-3">Şubelerimiz</h1>
             <div class="d-inline-flex align-items-center text-white">
-                <p class="m-0"><a class="text-white" href="">Şube bilgilerimiz</a></p>
+                <p class="m-0"><a class="text-white" href="">Şubelerimiz hakkında adres ve telefon bilgileri</a></p>
                 <!-- <i class="fa fa-circle px-3"></i> -->
                 <p class="m-0"></p>
             </div>
@@ -367,7 +365,7 @@
 
 
    <!-- Footer Start -->
-   <div class="container-fluid bg-dark text-white mt-5 py-5 px-sm-3 px-md-5">
+   <div id="footer" class="container-fluid bg-dark text-white mt-5 py-5 px-sm-3 px-md-5">
     <div class="row pt-5">
         <div class="col-lg-7 col-md-6">
             <div class="row">
@@ -420,28 +418,10 @@
         <div class="col-lg-6 text-center text-md-left mb-3 mb-md-0">
             <p class="m-0 text-white">&copy; <a href="#">Mersin Taşımacılık</a>. Tüm hakları saklıdır.
             
-            <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-            Designed by <a href="https://htmlcodex.com">HTML Codex</a>
+            <br>
+            <span style="font-size: 8px;">Tasarım: HTML Codex</span>
             </p>
         </div>
-        <!-- 
-        <div class="col-lg-6 text-center text-md-right">
-            <ul class="nav d-inline-flex">
-                <li class="nav-item">
-                    <a class="nav-link text-white py-0" href="#">Privacy</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white py-0" href="#">Terms</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white py-0" href="#">FAQs</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white py-0" href="#">Help</a>
-                </li>
-            </ul>
-        </div>
-        -->
     </div>
 </div>
 <!-- Footer End -->
