--- a/mersin/index.html
+++ b/mersin/index.html
@@ -112,7 +112,7 @@
 
 
     <!-- About Start -->
-    <div class="container-fluid py-5">
+    <div class="container-fluid bg-secondary my-5">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-5 pb-4 pb-lg-0">
@@ -160,6 +160,7 @@
 
 
     <!--  Quote Request Start -->
+      <!-- 
     <div class="container-fluid bg-secondary my-5">
         <div class="container">
             <div class="row align-items-center">
@@ -208,6 +209,7 @@
             </div>
         </div>
     </div>
+    -->
     <!-- Quote Request Start -->
 
 
@@ -272,7 +274,7 @@
                     <ul class="list-inline">
                         <li><h6><i class="far fa-dot-circle text-primary mr-3"></i>30+ yıl Tecrübe</h6>
                         <li><h6><i class="far fa-dot-circle text-primary mr-3"></i>Sigortalı Taşımacılık</h6></li>
-                        <li><h6><i class="far fa-dot-circle text-primary mr-3"></i>L1, TIO Belgeleri</h6></li>
+                        <li><h6><i class="far fa-dot-circle text-primary mr-3"></i>L1, G1, TIO Belgeleri</h6></li>
                         <li><h6><i class="far fa-dot-circle text-primary mr-3"></i>TMFB Belgesi</h6></li>
                     </ul>
                     <!-- <a href="" class="btn btn-primary mt-3 py-2 px-4">Learn More</a> -->
@@ -523,11 +525,10 @@
                     <div class="col-md-6 mb-5">
                         <h3 class="text-primary mb-4">Hızlı Linkler</h3>
                         <div class="d-flex flex-column justify-content-start">
-                            <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Ana Sayfa</a>
-                            <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Hakkımızda</a>
-                            <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Hizmetlerimiz</a>
-                            <!-- <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Pricing Plan</a> -->
-                            <a class="text-white" href="#"><i class="fa fa-angle-right mr-2"></i>İletişim</a>
+                            <a class="text-white mb-2" href="index.html"><i class="fa fa-angle-right mr-2"></i>Ana Sayfa</a>
+                            <a class="text-white mb-2" href="about.html"><i class="fa fa-angle-right mr-2"></i>Hakkımızda</a>
+                            <a class="text-white mb-2" href="contact.html"><i class="fa fa-angle-right mr-2"></i>Şubelerimiz</a>
+                            
                         </div>
                     </div>
                 </div>
