--- a/mersin/contact.html
+++ b/mersin/contact.html
@@ -386,11 +386,10 @@
                 <div class="col-md-6 mb-5">
                     <h3 class="text-primary mb-4">Hızlı Linkler</h3>
                     <div class="d-flex flex-column justify-content-start">
-                        <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Ana Sayfa</a>
-                        <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Hakkımızda</a>
-                        <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Hizmetlerimiz</a>
-                        <!-- <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Pricing Plan</a> -->
-                        <a class="text-white" href="#"><i class="fa fa-angle-right mr-2"></i>İletişim</a>
+                        <a class="text-white mb-2" href="index.html"><i class="fa fa-angle-right mr-2"></i>Ana Sayfa</a>
+                            <a class="text-white mb-2" href="about.html"><i class="fa fa-angle-right mr-2"></i>Hakkımızda</a>
+                            <a class="text-white mb-2" href="contact.html"><i class="fa fa-angle-right mr-2"></i>Şubelerimiz</a>
+                            
                     </div>
                 </div>
             </div>
