--- a/gridder.html
+++ b/gridder.html
@@ -65,10 +65,10 @@
 
         function rep() 
     {
-        let mytext = document.getElementById("mytext").value.split(",");
-        document.getElementById("mytext").value = "";
+        let mytext = document.getElementById("myid").value.split(",");
+        document.getElementById("myid").value = "";
         for(let i=0;i<mytext.length;i++){
-            document.getElementById("mytext").value += mytext[i] + "\n";
+            document.getElementById("myid").value += mytext[i] + "\n";
         }
        
 
