--- a/mersin/about.html
+++ b/mersin/about.html
@@ -123,7 +123,7 @@
                 <div class="col-lg-7">
                     <h6 class="text-primary text-uppercase font-weight-bold">Misyonumuz</h6>
                     <!-- <h1 class="mb-4">Lider & Yenilikçi</h1> -->
-                    <p class="mb-4">Mersin Taşımacılık Şirketi olarak misyonumuz, kaliteli, hızlı ve güvenilir taşımacılık hizmetleri sunarak müşterilerimizin ihtiyaçlarını eksiksiz karşılamak ve lojistik süreçlerini optimize etmektir. Profesyonel ekibimiz, ileri teknolojiye dayalı araç filomuz ve etkin operasyonel stratejilerimizle, taşımacılık hizmetlerinde mükemmellik standardını yakalamak ve sektörde fark yaratmak için çalışıyoruz.</p>
+                    <p class="mb-4">Mersin Taşımacılık A.Ş. olarak misyonumuz, kaliteli, hızlı ve güvenilir taşımacılık hizmetleri sunarak müşterilerimizin ihtiyaçlarını eksiksiz karşılamak ve lojistik süreçlerini optimize etmektir. Profesyonel ekibimiz, ileri teknolojiye dayalı araç filomuz ve etkin operasyonel stratejilerimizle, taşımacılık hizmetlerinde mükemmellik standardını yakalamak ve sektörde fark yaratmak için çalışıyoruz.</p>
                     <!-- <div class="d-flex align-items-center pt-2">
                         <button type="button" class="btn-play" data-toggle="modal"
                             data-src="https://www.youtube.com/embed/DWRcNpR6Kdc" data-target="#videoModal">
@@ -164,8 +164,8 @@
                 </div>
                 <div class="col-lg-7 py-5 py-lg-0">
                     <h6 class="text-primary text-uppercase font-weight-bold">Vizyonumuz</h6>
-                    <!-- <h1 class="mb-4">Faster, Safe and Trusted Logistics Services</h1> -->
-                    <p class="mb-4">Mersin Taşımacılık Şirketi olarak vizyonumuz, lojistik sektöründe lider ve yenilikçi bir firma olarak tanınmak ve müşteri memnuniyetini en üst düzeyde tutarak global arenada rekabet edebilirliğimizi artırmaktır. Teknolojiyi etkin kullanarak, sürdürülebilir çözümler sunarak ve sürekli gelişim prensibiyle hareket ederek, müşterilerimizin ve iş ortaklarımızın güvenilir çözüm ortağı olmayı hedefliyoruz.</p>
+                    
+                    <p class="mb-4">Mersin Taşımacılık A.Ş. olarak vizyonumuz, lojistik sektöründe lider ve yenilikçi bir firma olarak tanınmak ve müşteri memnuniyetini en üst düzeyde tutarak global arenada rekabet edebilirliğimizi artırmaktır. Teknolojiyi etkin kullanarak, sürdürülebilir çözümler sunarak ve sürekli gelişim prensibiyle hareket ederek, müşterilerimizin ve iş ortaklarımızın güvenilir çözüm ortağı olmayı hedefliyoruz.</p>
                     <ul class="list-inline">
                         <li><h6><i class="far fa-dot-circle text-primary mr-3"></i>Teknoloji</h6>
                         <li><h6><i class="far fa-dot-circle text-primary mr-3"></i>Sürdürülebilirlik</h6></li>
