--- a/editor.html
+++ b/editor.html
@@ -104,7 +104,7 @@
         }
 
         function copyText() {
-            navigator.clipboard.writeText(document.getElementById("mytext").value;
+            navigator.clipboard.writeText(document.getElementById("mytext").value);
         }
         
         function clean() {
