--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   </body>
   <script>
     let output = document.getElementById("output");
-    let headers = ["Loader", "Reddit", "Gridder","Text Editor"];
-    let links = ["loader.html","reddit.html","gridder.html","editor.html"];
+    let headers = ["Loader", "Reddit", "Gridder","Text Editor","My Reddit"];
+    let links = ["loader.html","reddit.html","gridder.html","editor.html","myreddit.html"];
     for(let i=0;i<headers.length;i++){
       output.innerHTML += `<li><a href="${links[i]}">${headers[i]}</a></li>`;
     }
